kaizer-portfolio/next-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaizer-portfolio-deployment-production
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: kaizer-portfolio-production
  template:
    metadata:
      labels:
        app: kaizer-portfolio-production
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: kaizer-portfolio-container-production
          image: ghcr.io/kaizerpwn/kaizer-portfolio-next:93886f414d8873ccef0d5d41e23f5b3c26beacff
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: registry-1
