kaizer-portfolio/next-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kaizer-portfolio-service-production
spec:
  type: LoadBalancer
  selector:
    app: kaizer-portfolio-production
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
